# greg-ng

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  module.nix
assets/: default-mpv.conf
src/: api.rs  main.rs  mpv_broker.rs  mpv_setup.rs  util.rs
src/api/: base.rs  rest_wrapper_v1.rs  rest_wrapper_v2.rs  websocket_v1.rs
src/util/: connection_counter.rs  id_pool.rs
