[package]
name = "greg-ng"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["oysteikt@pvv.ntnu.no"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.4", features = ["macros", "ws"] }
clap = { version = "4.4.1", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.20"
mpvipc-async = { git = "https://git.pvv.ntnu.no/Grzegorz/mpvipc-async.git", branch = "main" }
sd-notify = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
systemd-journal-logger = "2.2.0"
tempfile = "3.11.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tungstenite = "0.26.2"
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum", "vendored"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
