[package]
name = "greg-ng"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["oysteikt@pvv.ntnu.no"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros", "ws"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
mpvipc-async = { git = "https://git.pvv.ntnu.no/Grzegorz/mpvipc-async.git", branch = "main" }
sd-notify = "0.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
systemd-journal-logger = "2.2.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "process", "signal"] }
tower = "0.5.2"
tower-http = "0.6.8"
tungstenite = "0.28.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
