[package]
name = "greg-ng"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["projects@pvv.ntnu.no"]
readme = "README.md"
homepage = "https://git.pvv.ntnu.no/Grzegorz"
repository = "https://git.pvv.ntnu.no/Grzegorz/greg-ng"
description = "A shared music player system, utilizing mpv"
categories = ["multimedia"]
keywords = ["mpv", "music-player"]
autobins = false
autolib = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "ws"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
futures = "0.3.32"
log = "0.4.29"
mpvipc-async = { git = "https://git.pvv.ntnu.no/Grzegorz/mpvipc-async.git", branch = "main" }
sd-notify = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
systemd-journal-logger = "2.2.2"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "process", "signal"] }
tower = "0.5.3"
tower-http = "0.6.11"
tungstenite = "0.29.0"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "greg-ng"
bench = false
path = "src/main.rs"
